--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
   "devDependencies": {
     "@truffle/hdwallet-provider": "^1.4.1",
     "bignumber": "1.1.0",
-    "openzeppelin-solidity": "^1.10.0",
     "truffle": "^4.1.14"
   },
-  "dependencies": {}
+  "dependencies": {
+    "@openzeppelin/contracts": "^4.1.0"
+  }
 }
